// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`read csv should get X and y 1`] = `
Object {
  "fields": Array [
    Object {
      "name": "Column 1",
      "type": "number",
    },
    Object {
      "name": "Column 2",
      "type": "number",
    },
    Object {
      "name": "Column 3",
      "type": "number",
    },
    Object {
      "name": "Field 4",
      "type": "number",
    },
  ],
  "rows": Array [
    Array [
      2,
      3,
      4,
      null,
    ],
    Array [
      5,
      6,
      null,
      null,
    ],
    Array [
      null,
      null,
      null,
      7,
    ],
  ],
}
`;

exports[`read csv should read csv from local file system 1`] = `
Object {
  "fields": Array [
    Object {
      "name": "a",
      "type": "number",
    },
    Object {
      "name": "b",
      "type": "number",
    },
    Object {
      "name": "c",
      "type": "number",
    },
  ],
  "rows": Array [
    Array [
      10,
      20,
      30,
    ],
    Array [
      40,
      50,
      60,
    ],
  ],
}
`;

exports[`read csv should read csv with headers 1`] = `
Object {
  "fields": Array [
    Object {
      "name": "a",
      "type": "number",
      "unit": "ms",
    },
    Object {
      "name": "b",
      "type": "string",
      "unit": "lengthm",
    },
    Object {
      "name": "c",
      "type": "boolean",
      "unit": "s",
    },
  ],
  "rows": Array [
    Array [
      10,
      "20",
      true,
    ],
    Array [
      40,
      "50",
      false,
    ],
    Array [
      40,
      "500",
      false,
    ],
    Array [
      40,
      "50",
      true,
    ],
  ],
}
`;
